--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div id="main-game">
         <div class="main-layout">
             <div class="sidebar-image">
-                <img src="D:\лиза.png" alt="Mascot">
+                <img src="D:\image_bc99e1.png" alt="Mascot">
             </div>
 
             <div class="game-area">
@@ -203,4 +203,5 @@
         }
     </script>
 </body>
+
 </html>
